# tinix-bazi

./: .gitignore  package-lock.json  package.json
backendjs/: package.json  server.js
backendjs/src/bazi/: calculator.js
backendjs/src/bazi/services/: bazi_ai.service.js
backendjs/src/routes/: bazi.routes.js  consultant.routes.js  que.routes.js  tuvi.routes.js
backendjs/src/services/: bazi.service.js  database.service.js  openrouter.service.js  que.service.js
backendjs/src/tuvi/: analyzer.js  calculator.js  dictionary.js  horoscope_composer.js  narrative_composer.js  tuvi_engine.js
backendjs/src/tuvi/data/: 144_cuc.json  classical_poetry.json  daily_shards.json  flavor_pool.json  general_narratives.json  horoscope_narratives.json  horoscope_shards.json  major_patterns.json  micro_essays.json  phi_tinh.json  phu_tinh.json  shards.json  special_formations.json  star_layers.json  tam_hop_narratives.json
backendjs/src/tuvi/questions/: data.js
backendjs/src/tuvi/services/: tuvi_ai.service.js
brain/182c456b-0967-40a3-83b1-c98d45c59092/scratch/: debug_1984.js  test_calculator.js  test_engine_v2.js  verify_variety.js
frontend/: .gitignore  package.json
frontend/src/: App.jsx
frontend/src/components/: DesktopShell.jsx  MobileShell.jsx  SuggestedQuestions.jsx
frontend/src/config/: api.js
frontend/src/features/Consultant/: ConsultantPage.jsx
frontend/src/features/ConsultationHistory/: HistoryCard.jsx  (+1 more)
frontend/src/hooks/: useTuViApi.js
frontend/src/services/: apiClient.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+13 files in other folders)
