[package]
name = "tinix-bazi"
version = "0.0.0"
description = "TiniX BaZi Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = [ "shell-all", "api-all", "os-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
